--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -4,6 +4,7 @@ $color_3: #42be2a;
 $color_4: gray;
 $background-color_1: #e4e5e7;
 $background-color_2: #e0e5ea;
+@import 'bootstrap';
 
 body {
   background-color: $background-color_1;
